[package]
name = "rd-tool"
version = "0.1.0"
authors = ["Kyle Siefring <kylesiefring@gmail.com>"]
edition = "2018"

[lib]
name = "rs_rd_tool"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
